# RealmOfAesir

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  compile_external.sh
backend/: CMakeLists.txt  init_aesir_main.sql  seed.sql
backend/src/: CMakeLists.txt  cmake_install.cmake  config.h  main.cpp
backend/src/message_handlers/: message_dispatcher.h
backend/src/message_handlers/backend/: backend_create_character_handler.cpp  backend_create_character_handler.h  backend_login_handler.cpp  backend_login_handler.h  backend_quit_handler.cpp  backend_quit_handler.h  backend_register_handler.cpp  backend_register_handler.h
backend/src/repositories/: banned_users_repository.cpp  banned_users_repository.h  repository_exceptions.h  settings_repository.cpp  settings_repository.h  users_repository.cpp  users_repository.h
backend/test/: CMakeLists.txt  banned_users_repository_tests.cpp  main.cpp  settings_repository_tests.cpp  users_repository_tests.cpp
client/: CMakeLists.txt  README.md
client/extra/: sdl_main.cpp
client/src/: custom_optional.h  main.cpp  map.cpp  map.h  shader_utils.cpp  shader_utils.h  sprite.cpp  sprite.h  texture_atlas.cpp  texture_atlas.h  texture_manager.cpp  texture_manager.h  timer.cpp  timer.h
common/src/: custom_optional.h  database_connection.cpp  database_connection.h  database_pool.cpp  database_pool.h  database_transaction.cpp  database_transaction.h  exceptions.h  kafka_consumer.cpp  kafka_consumer.h  kafka_producer.cpp  kafka_producer.h  macros.h  misc.cpp  misc.h  on_leaving_scope.h  repository.cpp  repository.h  roa_di.h  sql_exceptions.h
common/test/: CMakeLists.txt  admin_messages_tests.cpp  chat_messages_test.cpp  di_tests.cpp  game_messages_test.cpp  main.cpp  test_helpers.h  uac_messages_tests.cpp
common/test/test_helpers/: test_message.cpp  test_message.h
gateway/: CMakeLists.txt
gateway/src/: config.h  main.cpp  user_connection.cpp  user_connection.h
gateway/src/message_handlers/: message_dispatcher.h
gateway/src/message_handlers/client/: client_admin_quit_handler.cpp  client_admin_quit_handler.h  client_chat_send_handler.cpp  client_chat_send_handler.h  client_create_character_handler.cpp  client_create_character_handler.h  client_get_characters_handler.cpp  client_get_characters_handler.h  client_login_handler.cpp  client_login_handler.h  client_play_character_handler.cpp  client_play_character_handler.h  client_register_handler.cpp  client_register_handler.h
gateway/src/message_handlers/gateway/: gateway_chat_send_handler.cpp  gateway_chat_send_handler.h  gateway_error_response_handler.cpp  gateway_error_response_handler.h  gateway_get_characters_response_handler.cpp  gateway_get_characters_response_handler.h  gateway_login_response_handler.cpp  gateway_login_response_handler.h  gateway_quit_handler.cpp  gateway_quit_handler.h  gateway_register_response_handler.cpp  gateway_register_response_handler.h  gateway_send_map_handler.cpp  gateway_send_map_handler.h
world/: CMakeLists.txt  example_script.lua  example_script2.lua  init_aesir_world.sql  roa_library.lua  seed.sql  test_data.sql
world/benchmarks/: CMakeCache.txt  CMakeLists.txt  main.cpp
world/src/: CMakeLists.txt  config.h  main.cpp  settings.h
world/src/ecs/: ecs.h
world/src/ecs/components/: ai_component.h  character_component.h  effect_component.h  map_component.h  player_component.h  position_component.h  script_component.h  stat_component.h  tile_component.h
world/src/ecs/systems/: ai_system.h  ecs_system.h  effects_system.h  physics_system.h  player_event_system.cpp  player_event_system.h  script_system.cpp  script_system.h
world/src/effects/: base_effect.cpp  base_effect.h  blind_effect.cpp  blind_effect.h  burn_effect.cpp  burn_effect.h  heal_effect.cpp  heal_effect.h
world/src/events/: event.h
world/src/events/lua_events/: create_script_event.h  destroy_script_event.h  update_tile_event.h
world/src/events/player_events/: enter_map_event.cpp  enter_map_event.h  move_event.h  player_event.h  talk_event.h
world/src/helpers/: irandom_helper.h  random_helper.cpp  random_helper.h  tiled_converter.cpp  tiled_converter.h
world/src/lua/: lua_interop.cpp  lua_interop.h  lua_script.cpp  lua_script.h  roa_base_functions.cpp
world/src/materials/: base_material.cpp  base_material.h  clay_material.cpp  clay_material.h  copper_material.cpp  copper_material.h  dirt_material.cpp  dirt_material.h  iron_material.cpp  iron_material.h  oak_wood_material.cpp  oak_wood_material.h  pine_wood_material.cpp  pine_wood_material.h  plant_material.cpp  plant_material.h  titanium_material.cpp  titanium_material.h
world/src/message_handlers/: message_dispatcher.h
world/src/message_handlers/world/: world_create_character_handler.cpp  world_create_character_handler.h  world_get_characters_handler.cpp  world_get_characters_handler.h  world_play_character_handler.cpp  world_play_character_handler.h
world/src/objects/: base_object.cpp  base_object.h  beam_object.cpp  beam_object.h  boots_object.cpp  boots_object.h  pickaxe_object.cpp  pickaxe_object.h  shield_object.cpp  shield_object.h  sword_object.cpp  sword_object.h
world/src/repositories/: locations_repository.cpp  locations_repository.h  map_tiles_repository.cpp  map_tiles_repository.h  maps_repository.cpp  maps_repository.h  players_repository.cpp  players_repository.h  repository_exceptions.h  script_zones_repository.cpp  script_zones_repository.h  scripts_repository.cpp  scripts_repository.h  settings_repository.cpp  settings_repository.h
world/src/repositories/models/: location_model.h  map_model.h  map_tile_model.h  player_model.h  script_model.h  script_zone_model.h  setting_model.h
world/src/world/: world.cpp  world.h
world/test/: CMakeLists.txt  locations_repository_tests.cpp  main.cpp  map_tiles_repository_tests.cpp  maps_repository_tests.cpp  players_repository_tests.cpp  script_zones_repository_tests.cpp  scripts_repository_tests.cpp  settings_repository_tests.cpp  tiled_converter_tests.cpp
world/test/test_helpers/: startup_helper.cpp  startup_helper.h
(+34 files in other folders)
